--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,4 +10,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "14"
-      - run: node ./index.js
+      - run: npm run ci
+      - run: zip -r lambdaFunc.zip index.js
+      # - uses: aws-actions/configure-aws-credentials@v1
+      #   with:
+      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     aws-region: eu-west-2
