--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "14"
-      - run: npm run ci
+      - run: npm ci
       - run: zip -r lambdaFunc.zip index.js
       # - uses: aws-actions/configure-aws-credentials@v1
       #   with:
