--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,4 +17,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-2
-      - run: aws lambda update-function-code --function-name  formSubmitter --zip-file ./index.zip
+      - run: echo $GITHUB_WORKSPACE
+      - run: echo fileb://$GITHUB_WORKSPACE
+      - run: aws lambda update-function-code --function-name  formSubmitter --zip-file fileb://$GITHUB_WORKSPACE/lambdaFormSubmit/index.zip
