temp reduce size

--- a/package.json
+++ b/package.json
@@ -16,7 +16,5 @@
     "url": "https://github.com/michaelCaleyWhaley/lambdaFormSubmit/issues"
   },
   "homepage": "https://github.com/michaelCaleyWhaley/lambdaFormSubmit#readme",
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
