--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,6 @@
 {
   "env": {
-    "browser": true,
-    "node": false,
-    "es6": true
+    "node": true
   },
   "extends": ["airbnb", "prettier"],
   "settings": { "react": { "version": "detect" } },
