--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
   "rules": {
     "prettier/prettier": "error",
     "react/jsx-filename-extension": ["error", { "extensions": [".js"] }],
-    "jsx-a11y/anchor-is-valid": "Off"
+    "jsx-a11y/anchor-is-valid": "off",
+    "import/prefer-default-export": "off"
   }
 }
