--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "env": {
-    "node": true
+    "node": true,
+    "jest/globals": true
   },
   "extends": ["airbnb", "prettier"],
   "settings": { "react": { "version": "detect" } },
