--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-EMAIL_USER= email address sending from
-EMAIL_KEY= api key 
-EMAIL_HOST= 
+EMAIL_USER=webcomments@blah.co.uk
+EMAIL_KEY=apiKey 
+EMAIL_HOST=smtp.zoho.eu
